[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltsdk"
version = "0.1.0"
description = "Volt API SDK for scripting and notebooks"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools.packages.find]
where = ["src"]
