[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voltsdk"
version = "2.1.0"
description = "Python SDK for the Volt scientific computing platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "msgpack>=1.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
visualization = ["vtk>=9.2.0"]
notebook = ["vtk>=9.2.0", "k3d>=2.16.0"]
ovito = ["ovito>=3.9.0"]
all = ["vtk>=9.2.0", "k3d>=2.16.0", "ovito>=3.9.0"]

[tool.setuptools]
packages = [
    "voltsdk",
    "voltsdk.resources",
    "voltsdk.io",
    "voltsdk.integrations",
]

[tool.setuptools.package-dir]
voltsdk = "."
